; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/kernel/time/extr_tick-sched.c_tick_init_jiffy_update.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/kernel/time/extr_tick-sched.c_tick_init_jiffy_update.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i64 }

@xtime_lock = common dso_local global i32 0, align 4
@last_jiffies_update = common dso_local global %struct.TYPE_5__ zeroinitializer, align 8
@tick_next_period = common dso_local global %struct.TYPE_5__ zeroinitializer, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 ()* @tick_init_jiffy_update to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @tick_init_jiffy_update() #0 {
  %1 = alloca %struct.TYPE_5__, align 8
  %2 = call i32 @write_seqlock(i32* @xtime_lock)
  %3 = load i64, i64* getelementptr inbounds (%struct.TYPE_5__, %struct.TYPE_5__* @last_jiffies_update, i32 0, i32 0), align 8
  %4 = icmp eq i64 %3, 0
  br i1 %4, label %5, label %6

5:                                                ; preds = %0
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 8 bitcast (%struct.TYPE_5__* @last_jiffies_update to i8*), i8* align 8 bitcast (%struct.TYPE_5__* @tick_next_period to i8*), i64 8, i1 false)
  br label %6

6:                                                ; preds = %5, %0
  %7 = bitcast %struct.TYPE_5__* %1 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 8 %7, i8* align 8 bitcast (%struct.TYPE_5__* @last_jiffies_update to i8*), i64 8, i1 false)
  %8 = call i32 @write_sequnlock(i32* @xtime_lock)
  %9 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %1, i32 0, i32 0
  %10 = load i64, i64* %9, align 8
  ret i64 %10
}

declare dso_local i32 @write_seqlock(i32*) #1

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #2

declare dso_local i32 @write_sequnlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
